--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   flame: ^1.30.1
   envied: ^1.2.0
   geolocator: ^14.0.2
+  permission_handler: ^12.0.1
+  dio: ^5.9.0
+  pretty_dio_logger: ^1.4.0
 
 dev_dependencies:
   flutter_test:
