--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   permission_handler: ^12.0.1
   dio: ^5.9.0
   pretty_dio_logger: ^1.4.0
+  google_fonts: ^6.3.0
 
 dev_dependencies:
   flutter_test:
