--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   dio: ^5.9.0
   pretty_dio_logger: ^1.4.0
   google_fonts: ^6.3.0
+  google_generative_ai: ^0.4.7
 
 dev_dependencies:
   flutter_test:
